@@ -1,5 +1,6 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2001-08-06 allenb   Introduced Htonll and Ntohll. (currently only NSPR)
 2001-07-31 patrick  Fixed major problems with SocketImplBSD::isConnected() and
                     with FileHandleImplUNIX::is{Redable,Writeable}().  These
                     methods now work properly.
